# vnc_networks

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: python-app.yml
scripts/: dn_matching.ipynb  example_MDN_graphs.py  example_graph_visualisation.py  example_splitting_neurons_by_synapse_groups.py  example_synapse_plotting.py  fafb_missing_some_synapses.ipynb  fafb_to_manc.csv  loaddata.py  manc_to_fafb.csv  manc_to_fafb_sides.csv  sanity_check.py  test.py
scripts/examples/: example_adjacency_matrix.py  example_graph_visualisation.py  example_matrix_visualisation.py  example_splitting_neurons_by_synapse_groups.py  example_synapse_plotting.py  neuron_degree_vs_neurotransmitter.ipynb  test.ipynb
scripts/generate_plots/: Fig1_connections.py  Fig2_EI.py  MDN_params.py  cycling_of_hind_leg.ipynb  dn_to_interlayer_selection.ipynb  exc-inhib_exploration.py  figure1_independent.py  figure3_t1_extension.py  generic_DN_independence_of_leg_control.ipynb  generic_DN_muscle_synergies_script.py  generic_dn_independence.py  global_stats.ipynb  graph_focus.ipynb  graphs_exploration.py  independence_of_leg_control.ipynb  independence_of_leg_control_MDN.ipynb  muscle_synergies.ipynb  sensory_to_motor.ipynb  specific_graphs.ipynb
scripts/generate_plots_mdn_paper/: MDN_params.py  cycling_of_hind_leg.ipynb  exc-inhib_exploration.py  figure1_independent.py  figure3_t1_extension.py  figure4_t2_coupling.py  figure5_t3_oscillations.py  graphs_exploration.py  independence_of_leg_control.ipynb  independent.py  mdn_paper_helper_functions.py  motor_primitives.ipynb  muscle_synergies.ipynb
scripts/project_lea/: cluster_motor_neurons.ipynb  example_interactive_visualisation.ipynb  neurons_interconnectivity.ipynb  utils.py
scripts/sanity_checks/: comparison_clustering_algos.ipynb
tests/: test.py
tests/test_integration/: test_instantiation.py
tests/test_local/: test_connections.py  test_connectome_reader.py  test_data_loading.py  test_nx_design.py
vnc_networks/: __init__.py  cmatrix.py  connections.py  connectome_reader.py  get_nodes_data.py  neuron.py  params.py
vnc_networks/specific_neurons/: __init__.py  all_neurons_helper.py  dn_helper.py  (+3 more)
(+25 files in other folders)
