[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vnc_networks"
version = "0.0.1"
authors = [
  { name="Femke Hurtak", email="femke.hurtak@epfl.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
description = "Package to work with connectomes for network modelling"
dependencies = [
  "pandas",
  "numpy",
  "seaborn",
  "scipy",
  "matplotlib",
  "matplotlib-venn",
  "scikit-learn",
  "networkx",
  "pyvis",
  "pyarrow",
  "setuptools",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
