[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vnc_networks"
version = "0.0.1"
authors = [
  { name="Femke Hurtak", email="femke.hurtak@epfl.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
description = "Package to work with connectomes for network modelling"
dependencies = [
  "pandas",
  "numpy",
  "seaborn",
  "scipy",
  "matplotlib < 3.9",
  "matplotlib-venn",
  "scikit-learn",
  "networkx",
  # need the fix from https://github.com/WestHealth/pyvis/pull/222 to fix an error in windows
  "pyvis @ git+https://github.com/leshabirukov/pyvis@issue/force-utf-8-in-write-html",
  "pyarrow",
  "setuptools",
  "tqdm",
  "markov_clustering",
]

[tool.setuptools.packages.find]
where = ["."]
